# bashful

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
bashful/: __init__.py  __main__.py  agents.py  artifacts.py  cli.py  compare.py  config.py  dialectic.py  discovery.py  fanout.py  health.py  matrix.py  normalize.py  review.py  runner.py  skill.py  supervisor.py  worktree.py
bashful/data/: agents.json
docs/: architecture.md  hermes-profile.md
docs/plans/: bashful-bootstrap-plan.md  bashful-compare-watch-plan.md  bashful-matrix-plan.md  bashful-next-slice-plan.md  bashful-parallel-artifacts-plan.md  bashful-polish-pass-plan.md  bashful-review-dialectic-plan.md
tests/: test_artifacts.py  test_cli.py  test_compare.py  test_config.py  test_dialectic.py  test_discovery.py  test_fanout.py  test_health.py  test_matrix.py  test_normalize.py  test_review.py  test_runner.py  test_skill.py  test_supervisor.py  test_worktree.py
