[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bashful"
version = "0.1.0"
description = "Bash-native agent CLI discovery and orchestration toolkit"
requires-python = ">=3.11"
license = "MIT"

[project.scripts]
bashful = "bashful.cli:main"

[tool.setuptools.package-data]
bashful = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
